contact information for shop timtrave

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -97,11 +97,11 @@
   "text-get-in-touch": "تواصل معنا",
   "text-find-us-here": "اعثر علينا هنا",
   "text-address": "العنوان",
-  "text-address-details": "PO Box 14122 Collins Street West.Victoria",
+  "text-address-details": "FATIH MAH. 852. SOK. NO:8-10, DAIRE: 7, ESENYURT/ISTANBUL 34513",
   "text-email": "البريد الإلكتروني",
-  "text-email-details": "example@example.com",
+  "text-email-details": "timtraveww@gmail.com",
   "text-phone": "الهاتف",
-  "text-phone-details": "+1 1234 5678 90، +1 0987 6543 21",
+  "text-phone-details": "+905386040620",
   "text-order-received": "شكرًا لك. تم استلام طلبك.",
   "text-pay-cash": "الدفع نقدًا عند التسليم",
   "text-order-details": "تفاصيل الطلب",
