--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -92,16 +92,14 @@
   "text-register": "Registrieren",
   "text-terms": "Bedingungen",
   "text-policy": "Richtlinie",
-  "text-forgot-password": "Passwort vergessen?",
-  "text-reset-password": "Passwort zurücksetzen",
   "text-get-in-touch": "Kontakt aufnehmen",
   "text-find-us-here": "Hier finden",
   "text-address": "Adresse",
-  "text-address-details": "Postfach 14122 Collins Street West.Victoria",
+  "text-address-details": "FATIH MAH. 852. SOK. NO:8-10, DAIRE: 7, ESENYURT/ISTANBUL 34513",
   "text-email": "E-Mail",
-  "text-email-details": "example@example.com",
+  "text-email-details": "timtraveww@gmail.com",
   "text-phone": "Telefon",
-  "text-phone-details": "+1 1234 5678 90, +1 0987 6543 21",
+  "text-phone-details": "+905386040620",
   "text-order-received": "Danke. Ihre Bestellung wurde erhalten.",
   "text-pay-cash": "Bezahlen Sie bei Lieferung mit Bargeld.",
   "text-order-details": "Bestelldetails",
