--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -97,11 +97,11 @@
   "text-get-in-touch": "Get in touch",
   "text-find-us-here": "Find us here",
   "text-address": "Address",
-  "text-address-details": "PO Box 14122 Collins Street West.Victoria",
+  "text-address-details": "FATIH MAH. 852. SOK. NO:8-10, DAIRE: 7, ESENYURT/ISTANBUL 34513",
   "text-email": "Email",
-  "text-email-details": "example@example.com",
+  "text-email-details": "timtraveww@gmail.com",
   "text-phone": "Phone",
-  "text-phone-details": "+1 1234 5678 90, +1 0987 6543 21",
+  "text-phone-details": "+905386040620",
   "text-order-received": "Thank you. Your order has been received.",
   "text-pay-cash": "Pay with cash upon delivery.",
   "text-order-details": "Order details",
