--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -97,11 +97,11 @@
   "text-get-in-touch": "Póngase en contacto",
   "text-find-us-here": "Encuéntrenos aquí",
   "text-address": "Dirección",
-  "text-address-details": "PO Box 14122 Collins Street West.Victoria",
+  "text-address-details": "FATIH MAH. 852. SOK. NO:8-10, DAIRE: 7, ESENYURT/ISTANBUL 34513",
   "text-email": "Correo electrónico",
-  "text-email-details": "example@example.com",
+  "text-email-details": "timtraveww@gmail.com",
   "text-phone": "Teléfono",
-  "text-phone-details": "+1 1234 5678 90, +1 0987 6543 21",
+  "text-phone-details": "+905386040620",
   "text-order-received": " Gracias. Su pedido ha sido recibido.",
   "text-pay-cash": "Pague en efectivo al momento de la entrega.",
   "text-order-details": "Detalles del pedido",
