--- a/public/locales/he/common.json
+++ b/public/locales/he/common.json
@@ -97,11 +97,11 @@
   "text-get-in-touch": "נהיה בקשר",
   "text-find-us-here": "מצא אותנו כאן",
   "text-address": "כתובת",
-  "text-address-details": "ת.ד 14122 רחוב קולינס מערב. ויקטוריה",
+  "text-address-details": "FATIH MAH. 852. SOK. NO:8-10, DAIRE: 7, ESENYURT/ISTANBUL 34513",
   "text-email": "אימייל",
-  "text-email-details": "example@example.com",
+  "text-email-details": "timtraveww@gmail.com",
   "text-phone": "מכשיר טלפון",
-  "text-phone-details": "+1 1234 5678 90, +1 0987 6543 21",
+  "text-phone-details": "+905386040620",
   "text-order-received": "תודה. ההזמנה שלך התקבלה.",
   "text-pay-cash": "שלם במזומן עם המסירה.",
   "text-order-details": "פרטי ההזמנה",
