--- a/public/locales/zh/common.json
+++ b/public/locales/zh/common.json
@@ -97,11 +97,11 @@
   "text-get-in-touch": "联系我们",
   "text-find-us-here": "在这里找到我们",
   "text-address": "地址",
-  "text-address-details": "维多利亚州西柯林斯街14122号邮政信箱",
+  "text-address-details": "FATIH MAH. 852. SOK. NO:8-10, DAIRE: 7, ESENYURT/ISTANBUL 34513",
   "text-email": "电子邮件",
-  "text-email-details": "example@example.com",
+  "text-email-details": "timtraveww@gmail.com",
   "text-phone": "电话",
-  "text-phone-details": "+1 1234 5678 90，+1 0987 6543 21",
+  "text-phone-details": "+905386040620",
   "text-order-received": "谢谢。您的订单已收到",
   "text-pay-cash": "货到付款并用现金付款。",
   "text-order-details": "订单详细信息",
